Dark mode styling for number input fields (part of issue #264)

--- a/wx-src/pages/options.css
+++ b/wx-src/pages/options.css
@@ -77,6 +77,13 @@ select {
     font-size: 13px !important;
 }
 
+input[type="number"] {
+    height: 22px;
+    border: 1px solid var(--color-tb-border);
+    background-color: var(--color-tb-bkgd);
+    color: var(--color-tb-text);
+}
+
 select {
     margin-bottom: 0 !important;
     vertical-align: middle;
